# Wyatt-STM

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  TODO  conflict_profiling.md
STM/: ChannelFilter.h  DeferredResult.cpp  DeferredWaiter.cpp  DeferredWaiter.h  FindArg.h  LifetimeMonitor.h  MailBox.cpp  STMList.h  Timer.cpp  exports.h  stm.cpp  stm.h  stm_mem_check.h
STM/Test/: ChannelFilterTests.cpp  ChannelTests.cpp  MailboxTests.cpp  RunInThreadTests.cpp  STMListTests.cpp  TimerTests.cpp  stm_test.cpp
Testing/contention/: contention.cpp
Testing/timing/: timing.cpp
Testing/unit-tests/: DeferredWaiterTests.cpp  ExceptionCaptureAtomicTests.cpp  lifetime_monitor_tests.cpp  main.cpp  stm_test.cpp
doc/: Doxyfile  doc.md
doc/ref/html/: annotated.html  channel_8h.html  channel_8h_source.html  class_w_max_retries.html  class_w_max_retry_wait.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_base-members.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_base.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_core-members.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_core.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_core_3_01void_01_4-members.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_core_3_01void_01_4.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_core_base-members.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_core_base.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_watch-members.html  class_w_s_t_m_1_1_internal_1_1_w_deferred_value_watch.html  class_w_s_t_m_1_1_w_already_done_error-members.html  class_w_s_t_m_1_1_w_already_done_error.html  class_w_s_t_m_1_1_w_atomic-members.html  class_w_s_t_m_1_1_w_atomic.html  class_w_s_t_m_1_1_w_broken_promise_error-members.html  class_w_s_t_m_1_1_w_broken_promise_error.html  class_w_s_t_m_1_1_w_channel-members.html  class_w_s_t_m_1_1_w_channel.html  class_w_s_t_m_1_1_w_channel_reader-members.html  class_w_s_t_m_1_1_w_channel_reader.html  class_w_s_t_m_1_1_w_channel_writer-members.html  class_w_s_t_m_1_1_w_channel_writer.html  class_w_s_t_m_1_1_w_deferred_result-members.html  class_w_s_t_m_1_1_w_deferred_result.html  class_w_s_t_m_1_1_w_deferred_result_1_1_w_connection-members.html  class_w_s_t_m_1_1_w_deferred_result_1_1_w_connection.html  class_w_s_t_m_1_1_w_deferred_value-members.html  class_w_s_t_m_1_1_w_deferred_value.html  class_w_s_t_m_1_1_w_deferred_value_3_01void_01_4-members.html  class_w_s_t_m_1_1_w_deferred_value_3_01void_01_4.html  class_w_s_t_m_1_1_w_deferred_value_base-members.html  class_w_s_t_m_1_1_w_deferred_value_base.html  class_w_s_t_m_1_1_w_exception_capture-members.html  class_w_s_t_m_1_1_w_exception_capture.html  class_w_s_t_m_1_1_w_inconsistent-members.html  (+161 more)
doc/ref/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+28 more)
src/: STMList.cpp  channel.cpp  conflict_profiling_internal.cpp  conflict_profiling_internal.h  deferred_result.cpp  exception.cpp  exception_capture.cpp  lifetime_monitor.cpp  on_transaction_end.h  persistent_list.cpp  stm.cpp  work_queue.cpp
testing/channel/: channel_test.cpp
testing/conflict_profiling/: conflict_profiling_test.cpp
testing/contention/: contention_test.cpp
testing/correctness/: correctness_test.cpp
testing/multi-var/: multi_var_test.cpp
testing/perf-test/: perf_test.cpp
testing/unit-tests/: channel_tests.cpp  deferred_result_tests.cpp  exception_capture_tests.cpp  main.cpp  persistent_list_tests.cpp  stm_test.cpp
util/conflict_profiling_processor/: conflict_profiling_processor.cpp
wstm/: FindArg.h  MailBox.h  Timer.h  channel.h  conflict_profiling_processing.h  deferred_result.h  exception.h  exception_capture.h  exports.h  find_arg.h  maybe_unused.h  persistent_list.h  run_in_thread.h  stm.h  work_queue.h
